gs-todomvc: Some simplifications, add hidden styleClass when appropriate
Hide the footer if there is no todo, and the link to clear the completed todos
if there is no completed todo. The former version of the bindings did not work
because they used the “hide” CSS class but the class has been renamed to
“hidden” in the CSS file.